# Qidi_RFID_App

./: .gitignore  LICENSE  README.md  package.json
.github/workflows/: build.yml  release.yml
src/: i18n.js  index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/language/: de.json  en.json  hu.json  languages.json
